--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   dataSource:
-    url: jdbc:mysql://localhost:3306/mybatis
+    url: jdbc:mysql://localhost:3306/big_event
     username: root
-    password: admin123
+    password: Exworth123.
     driver-class-name: com.mysql.cj.jdbc.Driver
+server:
+  port: 8081
